@@ -22,7 +22,7 @@
 			if ( ON == get_current_user_pref_field( 'advanced_update' ) ) {
 				print_meta_redirect( 'bug_update_advanced_page.php?f_id='.substr($val[0], 7, strlen($val[0])-9), 0 );
 			} else {
-				print_meta_redirect( 'view_bug_page.php?f_id='.substr($val[0], 7, strlen($val[0])-9), 0 );
+				print_meta_redirect( 'bug_update_page.php?f_id='.substr($val[0], 7, strlen($val[0])-9), 0 );
 			}
 			exit;
 			}
