@@ -78,6 +78,7 @@ Mantis ChangeLog
  * Added notifications when a bug is deleted.
  * Added $g_view_attachments_threshold to control the access level required to view attachments.  This is useful when there is a need to share the knowledge about the defects, but to secure customer data.
  * Added the support to upload attachments to an FTP server (so now there is DISK, DATABASE, and FTP).  Recently uploaded/downloaded attachments are cached at the web server.
+ * Added support for modifying the reporter of a bug.
 
 2002.05.19  -  0.17.3
 
